# Simon_Leone

./: .gitignore  .gitmodules  95-simonleone.rules  CMakeLists.txt  README.md  simonleone.service
Arduino_projects/Simon_Leone/: Readme.md
Arduino_projects/Simon_Leone/src/: constants.h  main.cpp
src/: main.cpp  ofApp.cpp  ofApp.h  simon.h
